# SongbookAgent

./: .travis.yml  CMakeLists.txt  README.md  SongbookAgent.pro  SongbookClient.pro  appicon.rc  appveyor.yml  components.plist  dialogabout.cpp  dialogabout.ui  dialogsettings.cpp  dialogsettings.h  dialogsettings.ui  dialogupdate.cpp  dialogupdate.ui  dialogupdater.cpp  forcebuild  main.cpp  okjsongbookapi.cpp  okjsongbookapi.h  requeststablemodel.cpp  requeststablemodel.h  resources.qrc  settings.cpp  settings.h  songbookclient.cpp  songbookclient.h  songbookclient.ui  version.h
.github/workflows/: auto-update-versions-from-tag.yml  codeql-analysis.yml  mac-release-build.yaml  mac-unstable-build.yml  macOS-builder.yml  macos-build.yml  macos-test.yml  main.yml  windows-builds.yml  windows-test.yml
appveyor/: build_windows.cmd  openkj-songbook-agent_x86.iss  openkj-songbook-agent_x86_64.iss
macos/: MacSigningCert.p12.enc
resources/: SongbookAgent.icns
src/: dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogsettings.cpp  dialogsettings.h  dialogsettings.ui  dialogupdate.cpp  dialogupdate.h  dialogupdate.ui  dialogupdater.cpp  dialogupdater.h  dialogupdater.ui  main.cpp  okjsongbookapi.cpp  okjsongbookapi.h  requeststablemodel.cpp  requeststablemodel.h  settings.cpp  settings.h  songbookclient.cpp  songbookclient.h  songbookclient.ui  version.h
travis/: MacSigningCert.p12.enc  before_install.sh  build.sh  install.sh  openkj-songbook-agent-dmg.json
windows/: build_windows.cmd  openkj-songbook-agent_x86.iss  openkj-songbook-agent_x86_64.iss
